<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kinds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/kinds_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kinds_all" />

        <CheckBox
            android:id="@+id/kinds_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kinds_meal" />

        <CheckBox
            android:id="@+id/kinds_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kinds_snack" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/level_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_all" />

        <CheckBox
            android:id="@+id/level_very_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_very_easy" />

        <CheckBox
            android:id="@+id/level_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_easy" />

        <CheckBox
            android:id="@+id/level_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_middle" />

        <CheckBox
            android:id="@+id/level_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_hard" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tool" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/tool_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_all" />

        <CheckBox
            android:id="@+id/tool_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_fire" />

        <CheckBox
            android:id="@+id/tool_microwave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_microwave" />

        <CheckBox
            android:id="@+id/tool_oven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_oven" />

        <CheckBox
            android:id="@+id/tool_air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_air" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/time_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_all" />

        <CheckBox
            android:id="@+id/time_until_30m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_until_30m" />

        <CheckBox
            android:id="@+id/time_until_1h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_until_1h" />

        <CheckBox
            android:id="@+id/time_until_2h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_until_2h" />

        <CheckBox
            android:id="@+id/time_over_2h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_over_2h" />

    </LinearLayout>

    <Button
        android:id="@+id/search_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok" />

</LinearLayout>